Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3846

CID 1316404: Uninitialized members in HTTP2.h

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP/2
    • None

    Description

      *** CID 1316404:  Uninitialized members  (UNINIT_CTOR)
      /proxy/http2/HTTP2.h: 254 in Http2HeadersParameter::Http2HeadersParameter()()
      248       uint32_t stream_dependency;
      249       uint8_t weight;
      250     };
      251     
      252     // 6.2 HEADERS Format
      253     struct Http2HeadersParameter {
         CID 1316404:  Uninitialized members  (UNINIT_CTOR)
         Non-static class member field "priority.weight" is not initialized in this constructor nor in any functions that it calls.
      254       Http2HeadersParameter() : pad_length(0) {}
      255     
      256       uint8_t pad_length;
      257       Http2Priority priority;
      258     };
      259     
      

      Spec:

      https://tools.ietf.org/html/rfc7540#section-5.3.2

      5.3.2.  Dependency Weighting
      
         All dependent streams are allocated an integer weight between 1 and
         256 (inclusive).
      

      https://tools.ietf.org/html/rfc7540#section-5.3.5

      5.3.5.  Default Priorities
      
         All streams are initially assigned a non-exclusive dependency on
         stream 0x0.  Pushed streams (Section 8.2) initially depend on their
         associated stream.  In both cases, streams are assigned a default
         weight of 16.
      

      Attachments

        Activity

          People

            maskit Masakazu Kitajo
            maskit Masakazu Kitajo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: