TS-3846: Initialize priority with default values

The range of weight is between 1 and 256, and the the default weight is 16.
Therefore, a value in the code (or transferred) is one less than its weight.